--- a/web/src/betting_graph/components/RemainedBalance/RemainedBalance.css
+++ b/web/src/betting_graph/components/RemainedBalance/RemainedBalance.css
@@ -11,4 +11,5 @@
   text-align: center;
   background-color: #ffffff /*Optional*/;
   height: 47px;
+  vertical-align: middle;
 }
